// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders goal 1`] = `
<div
  className=""
>
  <div
    className="undefined"
  >
    <div
      className={undefined}
    />
    <div
      className={undefined}
    >
      Are you sure you want to delete this goal?
    </div>
    <div
      className={undefined}
    >
      <div
        className=""
        onClick={[Function]}
      >
        Cancel
      </div>
      <div
        className={undefined}
        onClick={[Function]}
      >
        Yes, delete
      </div>
    </div>
    <div
      className="undefined"
    >
      <div
        className=""
      >
        Error deleting goal.
      </div>
      <div
        className={undefined}
      >
        Please try again.
      </div>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        <div
          className={undefined}
        >
          <a
            className={undefined}
            href="/admin/goals"
            onClick={[Function]}
          >
            Close
          </a>
          <div
            className={undefined}
            onClick={[Function]}
          >
            <div
              className={undefined}
            />
            <div
              className={undefined}
            >
              Delete goal
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        Title:
      </div>
      <div
        className=""
        onClick={[Function]}
      >
        Goal Title
      </div>
      <div
        className=""
      >
        <input
          name="editedTitle"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          value=""
        />
      </div>
      <br />
      <div
        className={undefined}
      >
        Task Templates:
      </div>
      <div>
        <form
          className={undefined}
          onSubmit={[Function]}
        >
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              <div
                className={undefined}
              />
            </div>
          </div>
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              Task Template ID: 
              task-template-id
            </div>
            <br />
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                Title:
              </div>
              <input
                className=""
                name="title"
                onChange={[Function]}
                placeholder="Enter task title"
                value="Task Template Title"
              />
            </div>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                Priority:
              </div>
              <select
                className=""
                name="priority"
                onChange={[Function]}
                value="high"
              >
                <option
                  disabled={true}
                  hidden={true}
                  value=""
                >
                  Select Priority
                </option>
                <option
                  value="low"
                >
                  Low
                </option>
                <option
                  value="medium"
                >
                  Medium
                </option>
                <option
                  value="high"
                >
                  High
                </option>
              </select>
            </div>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                Repeating:
              </div>
              <select
                className=""
                name="repeating"
                onChange={[Function]}
                required={true}
                value="false"
              >
                <option
                  value="true"
                >
                  Yes
                </option>
                <option
                  value="false"
                >
                  No
                </option>
              </select>
            </div>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                Completed Within Interval:
              </div>
              <select
                className=""
                name="completedWithinInterval"
                onChange={[Function]}
                value="hour"
              >
                <option
                  disabled={true}
                  hidden={true}
                  value=""
                >
                  Select interval
                </option>
                <option
                  value="hour"
                >
                  Hour
                </option>
                <option
                  value="day"
                >
                  Day
                </option>
                <option
                  value="week"
                >
                  Week
                </option>
                <option
                  value="month"
                >
                  Month
                </option>
                <option
                  value="year"
                >
                  Year
                </option>
              </select>
            </div>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                Completed Within Number:
              </div>
              <select
                className=""
                name="completedWithinNumber"
                onChange={[Function]}
                value="1"
              >
                <option
                  disabled={true}
                  hidden={true}
                  value=""
                >
                  Select number
                </option>
                <option
                  value="1"
                >
                  1
                </option>
                <option
                  value="2"
                >
                  2
                </option>
                <option
                  value="3"
                >
                  3
                </option>
                <option
                  value="4"
                >
                  4
                </option>
                <option
                  value="5"
                >
                  5
                </option>
                <option
                  value="6"
                >
                  6
                </option>
                <option
                  value="7"
                >
                  7
                </option>
                <option
                  value="8"
                >
                  8
                </option>
                <option
                  value="9"
                >
                  9
                </option>
                <option
                  value="10"
                >
                  10
                </option>
              </select>
            </div>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                Default Assignee Role:
              </div>
              <select
                className=""
                name="careTeamAssigneeRole"
                onChange={[Function]}
                value="physician"
              >
                <option
                  disabled={true}
                  hidden={true}
                  value=""
                >
                  Select role
                </option>
                <option
                  value="physician"
                >
                  Physician
                </option>
                <option
                  value="nurseCareManager"
                >
                  Nurse Care Manager
                </option>
                <option
                  value="healthCoach"
                >
                  Health Coach
                </option>
                <option
                  value="familyMember"
                >
                  Family Member
                </option>
              </select>
            </div>
          </div>
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              <input
                className={undefined}
                type="submit"
                value="Save"
              />
              <div
                onClick={[Function]}
              >
                delete
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        className={undefined}
      >
        Create task template:
      </div>
      <form
        className={undefined}
        onSubmit={[Function]}
      >
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            <div
              className={undefined}
            />
          </div>
        </div>
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            New Task!
          </div>
          <br />
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              Title:
            </div>
            <input
              className=""
              name="title"
              onChange={[Function]}
              placeholder="Enter task title"
              value="edit me!"
            />
          </div>
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              Priority:
            </div>
            <select
              className=""
              name="priority"
              onChange={[Function]}
              value=""
            >
              <option
                disabled={true}
                hidden={true}
                value=""
              >
                Select Priority
              </option>
              <option
                value="low"
              >
                Low
              </option>
              <option
                value="medium"
              >
                Medium
              </option>
              <option
                value="high"
              >
                High
              </option>
            </select>
          </div>
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              Repeating:
            </div>
            <select
              className=""
              name="repeating"
              onChange={[Function]}
              required={true}
              value="false"
            >
              <option
                value="true"
              >
                Yes
              </option>
              <option
                value="false"
              >
                No
              </option>
            </select>
          </div>
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              Completed Within Interval:
            </div>
            <select
              className=""
              name="completedWithinInterval"
              onChange={[Function]}
              value=""
            >
              <option
                disabled={true}
                hidden={true}
                value=""
              >
                Select interval
              </option>
              <option
                value="hour"
              >
                Hour
              </option>
              <option
                value="day"
              >
                Day
              </option>
              <option
                value="week"
              >
                Week
              </option>
              <option
                value="month"
              >
                Month
              </option>
              <option
                value="year"
              >
                Year
              </option>
            </select>
          </div>
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              Completed Within Number:
            </div>
            <select
              className=""
              name="completedWithinNumber"
              onChange={[Function]}
              value=""
            >
              <option
                disabled={true}
                hidden={true}
                value=""
              >
                Select number
              </option>
              <option
                value="1"
              >
                1
              </option>
              <option
                value="2"
              >
                2
              </option>
              <option
                value="3"
              >
                3
              </option>
              <option
                value="4"
              >
                4
              </option>
              <option
                value="5"
              >
                5
              </option>
              <option
                value="6"
              >
                6
              </option>
              <option
                value="7"
              >
                7
              </option>
              <option
                value="8"
              >
                8
              </option>
              <option
                value="9"
              >
                9
              </option>
              <option
                value="10"
              >
                10
              </option>
            </select>
          </div>
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              Default Assignee Role:
            </div>
            <select
              className=""
              name="careTeamAssigneeRole"
              onChange={[Function]}
              value=""
            >
              <option
                disabled={true}
                hidden={true}
                value=""
              >
                Select role
              </option>
              <option
                value="physician"
              >
                Physician
              </option>
              <option
                value="nurseCareManager"
              >
                Nurse Care Manager
              </option>
              <option
                value="healthCoach"
              >
                Health Coach
              </option>
              <option
                value="familyMember"
              >
                Family Member
              </option>
            </select>
          </div>
        </div>
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            <input
              className={undefined}
              type="submit"
              value="Add task"
            />
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`renders goal error 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    />
    <div
      className={undefined}
    >
      Unable to load goal
    </div>
    <div
      className={undefined}
    >
      Sorry, something went wrong. Please try again.
    </div>
    <div
      className=""
      onClick={[Function]}
    >
      Try again
    </div>
  </div>
</div>
`;

exports[`renders goal loading 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    Loading...
  </div>
</div>
`;
